--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
   pin_code_fields: 7.4.0
   animated_text_kit: 4.2.2
   badges: 2.0.3
+  font_awesome_flutter: 10.2.1
+  url_launcher: 6.1.7
+  carousel_slider: 4.1.1
+  ticket_widget: 0.0.1
+  google_fonts: 3.0.1
   flutter: 
     sdk: flutter
 
@@ -21,8 +26,8 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
-  assets:
-  - assets/icons/
-  - assets/images/
+  assets: 
+    - assets/icons/
+    - assets/images/
   uses-material-design: true
 
